resolved home page aligning issues and font sizes

--- a/src/Pages/InstructorProfile/InstructorProfile.scss
+++ b/src/Pages/InstructorProfile/InstructorProfile.scss
@@ -6,4 +6,16 @@
 
     }
     // padding: 0 2rem;
+    .instName{
+        h3{
+            margin:0.2rem 0;
+        }
+        a{
+            text-decoration: none;
+        }
+        p{
+
+            margin:0.2rem 0;
+        }
+    }
 }
