--- a/src/components/Moto/Moto.scss
+++ b/src/components/Moto/Moto.scss
@@ -2,6 +2,9 @@
 .moto-container {
   font-family: $fontfmily1;
   background:#F8F9FA;
+  h3{
+    text-align: center;
+  }
   .WhoWeAre {
     display: grid;
     grid-template-columns: 0.1fr 0.4fr 0.4fr 0.1fr;
@@ -28,7 +31,7 @@
 
       h3 {
         font-family: "Without You";
-        font-size: clamp(1.5rem, 6vw, 3rem);
+        font-size: clamp(1.5rem, 6vw, 4rem);
         letter-spacing: 0.2rem;
         position: relative;
         left: 45px;
@@ -86,7 +89,7 @@
         text-align: justify;
         font-family: $fontfamily2;
         color: #4140429c;
-        font-weight: 100;
+        font-weight: 600;
         font-size: clamp(0.4rem, 2vw, 1rem);
       }
     }
@@ -116,7 +119,7 @@
         text-align: justify;
         font-family: $fontfamily2;
         color: #4140429c;
-        font-weight: 100;
+        font-weight: 600;
         font-size: clamp(0.4rem, 2vw, 1rem);
       }
     }
@@ -212,6 +215,7 @@
       flex-direction: row;
       justify-content: space-evenly;
       margin:2rem 0;
+      text-align: center;
       @media (max-width:650px){
         flex-direction: column;
         justify-content: space-evenly;
